PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Changed *pel-set-tab-width* binding from ~<f11> M-t~ to ~<f11> <tab> w~.
  The new binding is also easy to use and is associated with the other tab
  related commands by its prefix, serving as a reminder that other commands exist.
- Add *pel-treesit-toggle-mode* command, bound to ~<f11> C-t C-t~, which
  toggles the major mode  from the classic mode to the Tree-Sitter based major mode.
- PEL now support both *ada-mode* and Tree-Sitter based *ada-ts-mode*.
  - It automatically associates the tree-sitter based *ada-ts-mode* with Ada
    files when *pel-use-ada* customizable user-option is set to the new value
    =with-tree-sitter=. If it is set to =t= it select the classic *ada-mode*.
  - User can switch anytime and can also use one or the other mode for a given
    buffer: that has no influence on the mode selected for other Ada buffers
    opened later.
  - The new *pel-ada-setup-info* command, bound to ~<f12> ?~ in Ada buffers,
    provide information about the Ada support setup and access to the
    customization of several important user-options.
- Improve Forth support:
  - The *pel-forth-setup-info*, bound to ~<f12> ?~ in Forth buffers,
    provides information about the Forth support setup and access to the
    customization of several important user-options.
  - Provide access to the customization buffer used by the forth-mode files.
- PEL now support both *erlang-mode* and Tree-Sitter based *erlang-ts-mode*.
  - It automatically associates the tree-sitter based *erlang-ts-mode* with Erlang
    files when *pel-use-erlang* customizable user-option is set to the new value
    =with-tree-sitter=. If it is set to =t= it select the classic *erlang-mode*.
  - User can switch anytime and can also use one or the other mode for a given
    buffer: that has no influence on the mode selected for other Erlang buffers
    opened later.